<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Las cuatro estaciones"
        android:id="@+id/textView" />

    <ImageView
        android:layout_width="@dimen/anchoImagen"
        android:layout_height="@dimen/altoImagen"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/primavera"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Las estaciones"
        android:id="@+id/textView2" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupEstaciones">



        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primavera"
            android:id="@+id/rdbtnPrimavera" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verano"
            android:id="@+id/rdbtnVerano" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otonio"
            android:id="@+id/rdbtnOtonio" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invierno"
            android:id="@+id/rdbtnInvierno" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meGusta"
        android:id="@+id/btnMeGusta"
        android:layout_gravity="center_horizontal" />
</LinearLayout>